URLEncoder on older Android versions